Opened 4 years ago

Closed 3 years ago

Last modified 3 years ago

#16973 closed bug (fixed)

KDL: address must be dword aligned

Reported by: miqlas Owned by: waddlesplash
Priority: normal Milestone: R1/beta4
Component: Drivers/Disk/NVMe Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #16955
Platform: All

Description (last modified by miqlas)

Tried to start WebPositive on hrev55107 64 bit.

Attachments (23)

EF0EFCE0-4EF3-430F-814D-72BE036D2964.jpeg (535.0 KB ) - added by miqlas 4 years ago.
1E358E5C-1E54-4DED-A318-603A840C178C.jpeg (377.9 KB ) - added by miqlas 4 years ago.
E5A6B808-0587-4F3A-8470-54EA26A19DD7.jpeg (388.8 KB ) - added by miqlas 4 years ago.
P_20211017_175728.jpg (1.5 MB ) - added by kim1963 3 years ago.
hrev55181+62
P_20211017_175655.jpg (1.5 MB ) - added by kim1963 3 years ago.
P_20211017_175723.jpg (1.4 MB ) - added by kim1963 3 years ago.
P_20211017_175642.jpg (1.4 MB ) - added by kim1963 3 years ago.
P_20211017_175634.jpg (1.4 MB ) - added by kim1963 3 years ago.
P_20211017_175739.jpg (1.6 MB ) - added by kim1963 3 years ago.
syslog (270.0 KB ) - added by kim1963 3 years ago.
Telegram-1289-debug-27-10-2021-01-46-33.report (45.2 KB ) - added by kim1963 3 years ago.
screenshot1112.png (61.2 KB ) - added by kim1963 3 years ago.
screenshot1114.png (98.0 KB ) - added by kim1963 3 years ago.
P_20211027_120937.jpg (1.7 MB ) - added by kim1963 3 years ago.
P_20211027_120949.jpg (1.7 MB ) - added by kim1963 3 years ago.
P_20211027_120959.jpg (1.1 MB ) - added by kim1963 3 years ago.
P_20211027_121029.jpg (1.8 MB ) - added by kim1963 3 years ago.
P_20211027_121035.jpg (1.1 MB ) - added by kim1963 3 years ago.
P_20211027_121045.jpg (1.2 MB ) - added by kim1963 3 years ago.
P_20211027_121052.jpg (1.6 MB ) - added by kim1963 3 years ago.
P_20211027_121121.jpg (1.3 MB ) - added by kim1963 3 years ago.
syslog55592 (256.2 KB ) - added by kim1963 3 years ago.
Telegram-1283-debug-28-10-2021-02-16-54.report (45.5 KB ) - added by kim1963 3 years ago.

Change History (43)

comment:1 by miqlas, 4 years ago

Description: modified (diff)

comment:2 by pulkomandy, 4 years ago

Component: File Systems/packagefsDrivers/Disk/NVMe
Owner: changed from bonefish to waddlesplash

Changing component since the top of the backtrace is in the NVMe driver.

comment:3 by waddlesplash, 4 years ago

No idea how this might have happened, and not sure when I'll have time to investigate. The DMAResource should have bounced all unaligned addresses...

by kim1963, 3 years ago

Attachment: P_20211017_175728.jpg added

by kim1963, 3 years ago

Attachment: P_20211017_175655.jpg added

by kim1963, 3 years ago

Attachment: P_20211017_175723.jpg added

by kim1963, 3 years ago

Attachment: P_20211017_175642.jpg added

by kim1963, 3 years ago

Attachment: P_20211017_175634.jpg added

by kim1963, 3 years ago

Attachment: P_20211017_175739.jpg added

by kim1963, 3 years ago

Attachment: syslog added

comment:4 by kim1963, 3 years ago

Tried to start Telegram_desktop on hrev55181+62 64 bit.

comment:5 by waddlesplash, 3 years ago

Status: newin-progress

comment:6 by waddlesplash, 3 years ago

Should be fixed in hrev55520, please test.

comment:7 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: in-progressclosed

Diver reports that the KDL is indeed fixed.

comment:8 by kim1963, 3 years ago

hrev55585

reopened

comment:9 by kim1963, 3 years ago

Tried to start Telegram_desktop / telegram_desktop-3.1.9-1-x86_64.hpkg / hrev55585 64 bit.

telegram_desktop-3.1.9-2-x86_64.hpkg - work fine

device Mass storage controller (Non-Volatile memory controller, NVM Ex [1|8|2]

vendor 15b7: Sandisk Corp device 5002: WD Black 2018/SN750 / PC SN720 NVMe SSD

Last edited 3 years ago by kim1963 (previous) (diff)

comment:10 by waddlesplash, 3 years ago

The newer telegram_desktop package works? So, what is the problem then?

Either way, a Telegram crash is probably not a Haiku problem.

comment:11 by 3dEyes, 3 years ago

As far as I understand, the kim1963's problem returned after your commit https://github.com/haikuports/haikuports/commit/ed11128d7ee87dbe3115d9a0c155614624070efe.

Immediately after starting Telegram a KDL occurs, after which he types "cont" and gets a corresponding crash of Telegram (which makes sense).

PS: I hope kim1963 will attach a KDL photo here soon ;)

comment:12 by waddlesplash, 3 years ago

Ah, that makes sense. Yes, please attach the KDL photo. (Can you not reproduce it, then, 3dEyes?)

by kim1963, 3 years ago

Attachment: screenshot1112.png added

by kim1963, 3 years ago

Attachment: screenshot1114.png added

by kim1963, 3 years ago

Attachment: P_20211027_120937.jpg added

comment:13 by waddlesplash, 3 years ago

Resolution: fixed
Status: closedreopened

by kim1963, 3 years ago

Attachment: P_20211027_120949.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_120959.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_121029.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_121035.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_121045.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_121052.jpg added

by kim1963, 3 years ago

Attachment: P_20211027_121121.jpg added

comment:14 by 3dEyes, 3 years ago

Can you not reproduce it, then, 3dEyes?

I cannot reproduce this bug anymore on Haiku hrev55592 revision. Probably because I have a different NVME controller.

comment:15 by waddlesplash, 3 years ago

Please update to hrev55596 and then upload a new syslog, as there is more information that will be printed to it now (no need to trigger the KDL, it will definitely still occur.)

comment:16 by waddlesplash, 3 years ago

At least this problem does not trigger for me under QEMU when launching Telegram, with the default NVMe settings (block size 512).

comment:17 by waddlesplash, 3 years ago

OK, after staring at the code more, I realized there was a missing case. See if hrev55599 fixes the problem. If not, please do upload a syslog.

by kim1963, 3 years ago

Attachment: syslog55592 added

comment:18 by kim1963, 3 years ago

Closed. Fixed hrev55599

Last edited 3 years ago by kim1963 (previous) (diff)

comment:19 by waddlesplash, 3 years ago

Resolution: fixed
Status: reopenedclosed

Very good, thanks for your patience!

comment:20 by waddlesplash, 3 years ago

Blocking: 16955 added
Note: See TracTickets for help on using tickets.