nvme_disk: Check addresses are 32-bit-aligned before deciding we do not need to bounce.

This should fix #16973.